# fdat

./: .gitignore  COWORK_CLEANUP_NOTES.md  README.md  ROADMAP.md  SCRIPTS.md  main.js  package-lock.json  package.json
.local/: .android-avd.json  dev-android-pwa.js  dev-server.js  shell-dev-auto.js
app/: index.html  manifest.webmanifest
assets/: shell-error.html  shell-splash.html
docs/: index.html  index.html.backup  manifest.webmanifest  sw.js
docs/_twa/: assetlinks.template.json
fdat-py/: api.py  app.py  core.py  requirements.txt
fdat-py/assets/: index.html
fdat-py/assets/js/: context.js  document_controls.js  dom_helpers.js  genre_controls.js  language_controls.js  listref.js  quickload.js  salience.js  settings_backend.js
fdat-py/build_specs/: mac_build.sh  win_build.bat
fdat-py/services/: documents_service.py  settings_service.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
